# Block-Realityapi-Fast-design

./: .git_status.txt  .git_status_utf8.txt  .gitignore  AGENTS.md  AGENT_LOG.md  AUDIT_REPORT.md  BIFROST.md  BLOCK_REALITY_ULTIMATE_AUDIT_REPORT.md.crdownload  BLOCK_REALITY_v1_SECURITY_AUDIT_REPORT.md  BR_ChangeReport_20260329.docx  Block Reality 渲染管線研究報告.docx  CLAUDE.md  DAILY_PLAN.md  FINAL_AUDIT_REPORT.md  FLUID_ML_RESEARCH_REPORT.md  FLUID_SUBBLOCK_JAVA_SPEC.md  PAPER_LEVEL_CODE_REVIEW.md  PFSF v2 研發技術報告.md  PFSF v2.0 架構深度研究報告.docx  PFSF_勢場導流物理引擎完整製作手冊.docx.md  README.md  RENDER_MIGRATION_PLAN.md  check_brnetwork.py  check_client_leak.py  check_spi.py  fix_brvulkanrt.sh  fix_tooltips.py  fix_wire2.py  fix_wire3.py  jules_results.txt  patch.diff  patch.txt  quick-install.bat  search_results.txt  search_todos.py  start-trainer.bat  start-trainer.ps1  start-trainer.sh  test_plan.sh  test_tooltip.java
.claude/: launch.json
00_Director_Office/: FUTURE_THEMES.md  GLOBAL_TASK_DIST.md  NIGHTLY_REPORT.md  v3fix_vision.md
01_API_UX_Dept/: INBOX_TASKS.md  OUTBOX_REQUESTS.md  R_AND_D_NOTES.md  WORK_LOGS.md
02_Mechanics_Dept/: INBOX_TASKS.md  OUTBOX_REQUESTS.md  R_AND_D_NOTES.md  WORK_LOGS.md
03_Rendering_Dept/: INBOX_TASKS.md  OUTBOX_REQUESTS.md  R_AND_D_NOTES.md  (+1 more)
HYBR/: README.md  pyproject.toml
HYBR/hybr/: __init__.py
HYBR/hybr/core/: materialize.py  weight_bank.py
HYBR/hybr/data/: __init__.py
HYBR/hybr/physics/: __init__.py
HYBR/hybr/training/: __init__.py  meta_trainer.py  stability_utils.py
HYBR/tests/: test_adaptive_ssgo_forward.py  test_convergence.py  test_weight_generation.py
L1-native/: CMakeLists.txt
L1-native/libbr_core/: CMakeLists.txt
L1-native/libbr_core/include/br_core/: br_core.h  compute_pipeline.h  descriptor_cache.h  spirv_registry.h  vma_allocator.h  vulkan_device.h
L1-native/libbr_core/src/: br_core.cpp  compute_pipeline.cpp  spirv_registry.cpp  vma_allocator.cpp  vulkan_device.cpp
L1-native/libfluid/: CMakeLists.txt
L1-native/libfluid/include/fluid/: fluid.h
L1-native/libfluid/src/: fluid_api.cpp
L1-native/libfluid/src/core/: fluid_engine.cpp
L1-native/libfluid/src/jni/: native_fluid_bridge.cpp
L1-native/libpfsf/: CMakeLists.txt
L1-native/libpfsf/abi/: pfsf_v1.abi.json
L1-native/libpfsf/include/pfsf/: pfsf.h  pfsf_compute.h  pfsf_diagnostics.h  pfsf_extension.h  pfsf_plan.h  pfsf_trace.h  pfsf_version.h
L1-native/libpfsf/src/: pfsf_api.cpp  pfsf_engine.cpp  pfsf_engine.h
L1-native/libpfsf/src/compute/: arch_factor.cpp  arm_map.cpp  conductivity.cpp  downsample.cpp  features.cpp  morton.cpp  phantom_edges.cpp  stubs.cpp  version.cpp  wind_bias.cpp
L1-native/libpfsf/src/core/: island_buffer.cpp  island_buffer.h  vulkan_context.cpp  vulkan_context.h
L1-native/libpfsf/src/diag/: crash.cpp
L1-native/libpfsf/src/example/: cpu_backend.cpp  fixture_loader.cpp  main.cpp  vk_backend.cpp
L1-native/libpfsf/src/ext/: plan_dispatcher.cpp
L1-native/libpfsf/src/jni/: native_pfsf_bridge.cpp
L1-native/libpfsf/src/solver/: dispatcher.cpp  dispatcher.h  dispatcher_pcg.cpp  dispatcher_vcycle.cpp  failure_scan.cpp  jacobi_solver.cpp  jacobi_solver.h  pcg_solver.cpp  pcg_solver.h  phase_field.cpp  phase_field.h  sparse_scatter.cpp  sparse_scatter.h  vcycle_solver.cpp  vcycle_solver.h
L1-native/libpfsf/src/trace/: ring_buffer.cpp
L1-native/librender/: CMakeLists.txt
L1-native/librender/src/: render_api.cpp
L1-native/shaders/: CMakeLists.txt
brml/: pyproject.toml
brml/brml/: __init__.py
brml/brml/data/: blueprint_loader.py  physics_dataset.py
brml/brml/export/: __init__.py  onnx_contracts.py  onnx_export.py
brml/brml/models/: __init__.py  collapse_predictor.py  fno_fluid.py  lod_classifier.py  node_recommender.py  pfsf_surrogate.py  unified.py
brml/brml/pipeline/: auto_train.py  concurrent_trainer.py
brml/brml/train/: __init__.py  train_collapse.py  train_fnofluid.py  train_recommender.py  train_surrogate.py  trainer.py
brml/brml/ui/: __init__.py  app.py  i18n.py  session.py  tui.py  web_ui.py
brml/tests/: test_models.py  test_onnx_contracts.py
libpfsf/: CMakeLists.txt
libpfsf/src/: pfsf_engine.cpp
libpfsf/src/core/: buffer_manager.cpp  buffer_manager.h  constants.h  island_buffer.cpp  island_buffer.h  vulkan_context.cpp  vulkan_context.h
libpfsf/src/example/: main.cpp
ml/BR-NeXT/: README.md  pyproject.toml
ml/BR-NeXT/brnext/: __init__.py
ml/BR-NeXT/brnext/config/: __init__.py  normalization.yaml
ml/BR-NeXT/brnext/data/: block_material_map.py  schematic_loader.py
ml/BR-NeXT/brnext/evaluation/: ood_benchmark.py
ml/BR-NeXT/brnext/export/: contract_adapter.py  manual_onnx.py  onnx_export.py
ml/BR-NeXT/brnext/fem/: corner_filter.py  fem_solver_v2.py  hex8_element.py
ml/BR-NeXT/brnext/models/: __init__.py  losses.py  ssgo.py
ml/BR-NeXT/brnext/pipeline/: async_data_loader.py  cmfd_trainer.py
ml/BR-NeXT/brnext/teachers/: pfsf_teacher.py
ml/BR-NeXT/brnext/train/: __init__.py  train_robust_ssgo.py
ml/BR-NeXT/brnext/ui/: __init__.py  app.py  session.py  web_ui.py
ml/BR-NeXT/brnext/utils/: __init__.py
ml/BR-NeXT/tests/: test_ssgo_forward.py
ml/brml/: pyproject.toml
ml/brml/brml/: __init__.py
ml/brml/brml/data/: __init__.py  collapse_dataset.py  node_graph_loader.py  ns_reference_solver.py  physics_dataset.py
ml/brml/brml/export/: onnx_contracts.py
ml/brml/brml/fem/: __init__.py  fem_solver.py  hex8_element.py
ml/brml/brml/models/: __init__.py  fno_fluid.py  node_recommender.py  pfsf_surrogate.py  unified.py
ml/brml/brml/pipeline/: __init__.py
ml/brml/brml/train/: train_fnofluid.py  train_recommender.py
ml/brml/tests/: test_fem.py  test_onnx_contracts.py
reborn-ml/: LICENSE  README.md  pyproject.toml
reborn-ml/src/reborn_ml/experiments/: exp_007_ablation.py  exp_008_a100_benchmark.py
reborn-ml/src/reborn_ml/models/: __init__.py  diff_gaudi.py  diff_zaha.py  style_net.py
reborn-ml/src/reborn_ml/stages/: __init__.py  diff_topo.py
reborn-ml/src/reborn_ml/training/: __init__.py  data_pipeline.py  evaluator.py  style_trainer.py
reborn-ml/tests/: test_smoke.py
(+11033 files in other folders)
