[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybr"
version = "0.1.0"
description = "HYBR — HyperNetwork meta-learning engine for PFSF structural dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Block Reality Team"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.7.5",
    "optax>=0.1.7",
    "onnx>=1.15",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
cuda = ["jax[cuda12_pip]>=0.4.20"]

[tool.hatch.build.targets.wheel]
packages = ["hybr"]
