[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reborn-ml"
version = "0.2.0"
description = "StyleConditionedSSGO — 風格條件化頻譜神經算子訓練包（A100 級）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Block Reality Research", email = "research@blockreality.dev" },
]
keywords = [
    "jax", "flax", "neural-operator", "topology-optimization",
    "style-conditioning", "generative-design", "architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # JAX ecosystem
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.2.0",
    # Numerical
    "numpy>=1.24",
    "scipy>=1.11",
    # Data / IO
    "pyyaml>=6.0",
    "zarr>=2.16",
    "h5py>=3.9",
    # Optional experiment tracking (installed separately)
    # "mlflow>=2.9"  — uncomment if using MLflow tracker
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.4.20",
]
dev = [
    "pytest>=7.4",
    "pytest-xdist",
    "black",
    "ruff",
]
tracker = [
    "mlflow>=2.9",
]

[project.scripts]
reborn-train = "reborn_ml.experiments.exp_006_style_training:main"
reborn-ablation = "reborn_ml.experiments.exp_007_ablation:main"
reborn-benchmark = "reborn_ml.experiments.exp_008_a100_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reborn_ml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
    "requirements.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
