# ═══════════════════════════════════════════════════════════════════
#  shaders/ — build-time GLSL → SPIR-V precompile + C++ blob embed.
#
#  For each *.comp.glsl under
#    Block Reality/api/src/main/resources/assets/blockreality/shaders/
#  this runs:
#    glslangValidator --target-env vulkan1.2 -O -V -o <name>.spv <name>.glsl
#  then packs the resulting SPIR-V words into a constexpr uint32_t[] and
#  emits a generated header + translation unit. A static initialiser in
#  the TU calls br_core::SpirvRegistry::register_blob(...) so domain
#  libraries can look shaders up by canonical name at pipeline-build
#  time. Displaces BRVulkanDevice.compileGLSLtoSPIRV (~50 × ~150 ms cold
#  startup) — that Java path stays as a dev fallback.
#
#  Only engaged when BR_BUILD_SHADERS is ON. Gradle's precompileShaders
#  task normally produces the .spv offline so cross-compile builds don't
#  need glslangValidator installed.
# ═══════════════════════════════════════════════════════════════════

find_program(GLSLANG_VALIDATOR glslangValidator)
if(NOT GLSLANG_VALIDATOR)
    message(WARNING "[shaders] glslangValidator not found — falling back to Java-side compileGLSLtoSPIRV")
    return()
endif()

set(SHADER_SRC_DIR "${CMAKE_SOURCE_DIR}/../Block Reality/api/src/main/resources/assets/blockreality/shaders")
set(SHADER_OUT_DIR "${CMAKE_BINARY_DIR}/generated/spirv")
file(MAKE_DIRECTORY "${SHADER_OUT_DIR}")

file(GLOB_RECURSE SHADER_GLSLS
    RELATIVE "${SHADER_SRC_DIR}"
    "${SHADER_SRC_DIR}/*.comp.glsl"
    "${SHADER_SRC_DIR}/*.vert.glsl"
    "${SHADER_SRC_DIR}/*.frag.glsl"
    "${SHADER_SRC_DIR}/*.rgen.glsl"
    "${SHADER_SRC_DIR}/*.rchit.glsl"
    "${SHADER_SRC_DIR}/*.rmiss.glsl"
)

set(REGISTRY_ENTRIES "")
set(GENERATED_HEADERS "")

foreach(rel ${SHADER_GLSLS})
    get_filename_component(stem "${rel}" NAME_WE)   # e.g. "rbgs_smooth"
    get_filename_component(dir  "${rel}" DIRECTORY)
    string(REPLACE "/" "_" flat "${dir}_${stem}")
    string(REGEX REPLACE "^_+" "" flat "${flat}")
    string(REGEX REPLACE "\\.comp$" "" flat "${flat}")

    set(src_path "${SHADER_SRC_DIR}/${rel}")
    set(spv_path "${SHADER_OUT_DIR}/${flat}.spv")
    set(hdr_path "${SHADER_OUT_DIR}/${flat}.h")

    add_custom_command(
        OUTPUT  "${spv_path}"
        COMMAND "${GLSLANG_VALIDATOR}" --target-env vulkan1.2 -O -V
                -o "${spv_path}" "${src_path}"
        DEPENDS "${src_path}"
        COMMENT "[spirv] ${rel}"
        VERBATIM
    )

    add_custom_command(
        OUTPUT  "${hdr_path}"
        COMMAND "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_SOURCE_DIR}/pack_spirv.cmake"
                -- "${spv_path}" "${hdr_path}" "${flat}" "${rel}"
        DEPENDS "${spv_path}" "${CMAKE_CURRENT_SOURCE_DIR}/pack_spirv.cmake"
        COMMENT "[spirv-pack] ${flat}"
        VERBATIM
    )

    list(APPEND GENERATED_HEADERS "${hdr_path}")
    list(APPEND REGISTRY_ENTRIES "${flat}|${rel}")
endforeach()

# Emit the master registration translation unit.
set(REGISTRY_TU "${SHADER_OUT_DIR}/_spirv_registry_autogen.cpp")
set(REG_BODY "// AUTO-GENERATED by L1-native/shaders/CMakeLists.txt — do not edit.\n")
string(APPEND REG_BODY "#include \"br_core/spirv_registry.h\"\n")
string(APPEND REG_BODY "#include \"br_core/br_core.h\"\n")
foreach(entry ${REGISTRY_ENTRIES})
    string(REPLACE "|" ";" parts "${entry}")
    list(GET parts 0 flat)
    string(APPEND REG_BODY "#include \"${flat}.h\"\n")
endforeach()
string(APPEND REG_BODY "\nnamespace {\nstruct _SpirvAutoRegister {\n  _SpirvAutoRegister() {\n")
string(APPEND REG_BODY "    auto* c = br_core::get_singleton();\n    if (c == nullptr) return;\n")
foreach(entry ${REGISTRY_ENTRIES})
    string(REPLACE "|" ";" parts "${entry}")
    list(GET parts 0 flat)
    list(GET parts 1 rel)
    string(APPEND REG_BODY "    c->spirv.register_blob(\"${rel}\", ${flat}_spv, ${flat}_spv_word_count);\n")
endforeach()
string(APPEND REG_BODY "  }\n};\nstatic _SpirvAutoRegister _spirv_auto_register{};\n}\n")
file(WRITE "${REGISTRY_TU}.in" "${REG_BODY}")
configure_file("${REGISTRY_TU}.in" "${REGISTRY_TU}" COPYONLY)

add_library(br_shaders STATIC ${GENERATED_HEADERS} "${REGISTRY_TU}")
target_include_directories(br_shaders PRIVATE "${SHADER_OUT_DIR}")
target_link_libraries(br_shaders PUBLIC br_core)
set_target_properties(br_shaders PROPERTIES LINKER_LANGUAGE CXX POSITION_INDEPENDENT_CODE ON)

message(STATUS "[shaders] ${CMAKE_PROJECT_NAME} — ${GLSLANG_VALIDATOR}")
message(STATUS "  src: ${SHADER_SRC_DIR}")
message(STATUS "  out: ${SHADER_OUT_DIR}")
list(LENGTH SHADER_GLSLS _nshaders)
message(STATUS "  ${_nshaders} GLSL source(s) queued")
