[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brnext"
version = "0.1.0"
description = "Block Reality Neural Operator eXpert Transformer — portable structural ML trainer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Block Reality Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.7.5",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12_pip]>=0.4.20"]
export = ["jax2onnx>=0.1.0"]
data = ["duckdb>=0.10", "zarr>=2.16", "mlflow>=2.0"]

[project.scripts]
brnext-train = "brnext.pipeline.cmfd_trainer:main"
brnext-export = "brnext.export.onnx_export:main"

[tool.hatch.build.targets.wheel]
packages = ["brnext"]
